課題8を追加

--- a/kadai-8/index.html
+++ b/kadai-8/index.html
@@ -15,12 +15,14 @@
             if(num < 0.5) {
                 alert('吉です')
             } else if (num < 0.8) {
-                alert('中吉です') {
+                alert('中吉です') 
             } else if (num < 0.95) {
                 alert('大吉です')
             } else {
                 alert('きょうです')
-            })
+            }
+
+        })
     </script>
 </body>
 </html>
